# skybase-surveillance

./: .gitignore  Cargo.toml  Dockerfile  README.md  ToDo.md  config.toml.example  docker-compose.yml
src/: api.rs  config.rs  db.rs  hls_recorder.rs  main.rs  minio_client.rs  recorder.rs  rtsp_handlers.rs
