[package]
name = "skybase-surveillance"
version = "0.1.0"
edition = "2024"

[dependencies]
gstreamer = "0.20"
aws-sdk-s3 = "0.30"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }